# blitz

./: .gitignore  README.md  ROADMAP.md  blitz  debug_test.py  debug_test2.py  debug_test3.py  debug_test4.py  install.sh  onboarding.py  package.json  requirements.txt  setup.cfg  setup.py
agents/: __init__.py  architect.py  blitz-architect.md  blitz-designer.md  blitz-executor.md  blitz-planner.md  blitz-researcher.md  blitz-verifier.md  coder.py  researcher.py
blitz-core/: blitz-check-update.js  blitz-context-monitor.js  blitz-prompt-guard.js  blitz-statusline.js  blitz-workflow-guard.js
blitz-core/references/: continuation-format.md  decimal-phase-calculation.md  git-integration.md  git-planning-commit.md  model-profile-resolution.md  model-profiles.md  planning-config.md  (+4 more)
blitz_v3/: __init__.py
commands/: add-backlog.md  add-phase.md  audit-milestone.md  audit-uat.md  complete-milestone.md  discuss-phase.md  do.md  health.md  join-discord.md  list-phase-assumptions.md  map-codebase.md  new-project.md  note.md  pause-work.md  plan-milestone-gaps.md  pr-branch.md  progress.md  quick.md  reapply-patches.md  research-phase.md  review.md  session-report.md  set-profile.md  settings.md  thread.md  ui-phase.md  validate-phase.md  verify-work.md
core/: __init__.py  agent_spawner.py  doc_updater.py  git_manager.py  intent_detector.py  progress_streamer.py  state_manager.py  trust_manager.py
docs/: AUTO_SKILL_GENERATION.md  BLITZ-v2-SPEC.md  SKILLS_INTEGRATION.md
integration/: CLAUDE.md  __init__.py
tests/: test_checkpoint_integration.py  test_state_manager.py
(+101 files in other folders)
