[metadata]
name = blitz-v3
version = 3.1
description = The development autopilot - autonomous AI coding team
author = Shirin Prajapati
url = https://github.com/sprajapati024/blitz

[options]
packages = find:
package_dir =
    = .
python_requires = >=3.8

[options.packages.find]
where = .
include = blitz_v3
